ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap1
spec:
  backend:
    # Re-use echoheadersx as the default backend so we stay under the default
    # quota for gce BackendServices.
    serviceName: echoheadersz
    servicePort: 80
  rules:
  - host: foo1.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoheadersx
          servicePort: 80
  - host: bar1.baz.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echoheadersz
          servicePort: 80
      - path: /foo
        backend:
          serviceName: echoheadersx
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoheadersz
  labels:
    app: echoheaders
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30345
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders
